k8s-manifests/travel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-app
  namespace: travel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel
  template:
    metadata:
      labels:
        app: travel
    spec:
      containers:
      - name: travel
        image: 426192960096.dkr.ecr.us-east-1.amazonaws.com/travel:v1
        ports:
        - containerPort: 5000
