k8s-manifests/travel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-service
  namespace: travel
spec:
  selector:
    app: travel
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
