k8s-manifests/travel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-ingress
  namespace: travel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /travel
        pathType: Prefix
        backend:
          service:
            name: travel-service
            port:
              number: 80
